# portable-hw

./: README.md
file-hw/: CMakeLists.txt
file-hw/src/: file-hw-unix.cpp  file-hw-win.cpp
hw-portable/: CMakeLists.txt
hw-portable/src/: hw-portable.cpp
min-portable/: CMakeLists.txt
min-portable/src/: min-portable.cpp
static-portable/: CMakeLists.txt
static-portable/src/: plusone.cpp
syscall-hw/: CMakeLists.txt
syscall-hw/src/: syscall-unix.cpp  syscall-win.cpp
use-mylib/: CMakeLists.txt
use-mylib/shared-portable/: CMakeLists.txt
use-mylib/shared-portable/include/: mymathdll.h
use-mylib/shared-portable/src/: plusonedll.cpp
use-mylib/shared-portable/src/include/: mymathdll.h
use-mylib/src/: use-mylib.cpp
use-mylib/static-portable/: CMakeLists.txt
use-mylib/static-portable/include/: mymath.h
use-mylib/static-portable/src/: plusone.cpp
use-mylib/static-portable/src/include/: mymath.h
